--- a/mensajes_eventos.html
+++ b/mensajes_eventos.html
@@ -2,10 +2,15 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chat del Evento</title>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       font-family: 'Inter', sans-serif;
       background: #f0fff7;
@@ -18,53 +23,70 @@
 
     header {
       background: white;
-      padding: 1rem 2rem;
+      padding: 1rem 1.5rem;
       box-shadow: 0 2px 8px rgba(0,0,0,0.05);
       display: flex;
-      align-items: center;
       justify-content: space-between;
+      align-items: center;
     }
 
     header h2 {
-      color: #007e65;
+      color: #00b980;
+      font-size: 1.2rem;
       margin: 0;
+    }
+
+    header a {
+      color: #00b980;
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 0.9rem;
     }
 
     main {
       flex: 1;
-      padding: 1.5rem;
       overflow-y: auto;
+      padding: 1rem;
+      display: flex;
+      flex-direction: column;
     }
 
     .mensaje {
       background: white;
-      padding: 1rem;
+      padding: 0.8rem 1rem;
       border-radius: 16px;
-      margin-bottom: 1rem;
+      margin-bottom: 0.7rem;
       max-width: 75%;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.06);
-      animation: fadeInUp 0.4s ease;
+      box-shadow: 0 4px 14px rgba(0, 0, 0, 0.05);
+      word-wrap: break-word;
+      animation: fadeInUp 0.3s ease;
     }
 
     .mensaje.propio {
       margin-left: auto;
-      background: #d0fff0;
+      background: #d1fff0;
+      color: #003f2f;
+    }
+
+    .mensaje strong {
+      font-size: 0.9rem;
+      color: #007e65;
     }
 
     footer {
-      padding: 1rem 2rem;
-      background: white;
       display: flex;
-      gap: 1rem;
-      box-shadow: 0 -2px 10px rgba(0,0,0,0.05);
+      padding: 0.8rem;
+      background: white;
+      box-shadow: 0 -2px 10px rgba(0,0,0,0.04);
     }
 
     input[type="text"] {
       flex: 1;
-      padding: 0.8rem 1rem;
+      padding: 0.7rem 1rem;
       border-radius: 12px;
       border: 1px solid #ccc;
-      font-size: 15px;
+      font-size: 0.95rem;
+      outline: none;
     }
 
     button {
@@ -72,10 +94,12 @@
       color: white;
       border: none;
       border-radius: 12px;
-      padding: 0.8rem 1.2rem;
-      font-weight: 600;
+      padding: 0 1.2rem;
+      font-weight: bold;
+      margin-left: 0.6rem;
+      font-size: 0.95rem;
       cursor: pointer;
-      transition: background 0.3s ease;
+      transition: background 0.2s ease;
     }
 
     button:hover {
@@ -86,12 +110,31 @@
       from { opacity: 0; transform: translateY(10px); }
       to { opacity: 1; transform: translateY(0); }
     }
+
+    @media (max-width: 600px) {
+      header h2 {
+        font-size: 1rem;
+      }
+
+      .mensaje {
+        font-size: 0.9rem;
+      }
+
+      footer {
+        flex-direction: row;
+        padding: 0.6rem;
+      }
+
+      button {
+        padding: 0 1rem;
+      }
+    }
   </style>
 </head>
 <body>
   <header>
     <h2 id="nombre-evento">Cargando evento...</h2>
-    <a href="mis_eventos.html" style="color: #00b980; text-decoration: none; font-weight: 600;">⬅ Volver</a>
+    <a href="mis_eventos.html">⬅ Volver</a>
   </header>
 
   <main id="chat-container">
@@ -180,7 +223,7 @@
 
     supabase
       .channel('chat-evento-' + eventoId)
-      .on('postgres_changes', { event: '*', schema: 'public', table: 'mensajes_eventos' }, payload => {
+      .on('postgres_changes', { event: '*', schema: 'public', table: 'mensajes_eventos' }, () => {
         cargarMensajes();
       })
       .subscribe();
