--- a/perfil.html
+++ b/perfil.html
@@ -3,135 +3,147 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mi Perfil</title>
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <title>Mi Perfil | RetiroConnect</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <style>
-    body {
-      font-family: 'Inter', sans-serif;
-      background: #f0fdf4;
+    * {
+      box-sizing: border-box;
       margin: 0;
-      padding: 2rem;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      padding: 0;
     }
 
-    .card {
-      background: white;
-      border-radius: 20px;
+    body {
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(135deg, #e6fff4, #d1f7e8);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 2rem 1rem;
+      min-height: 100vh;
+    }
+
+    .perfil-card {
+      background: rgba(255, 255, 255, 0.2);
+      backdrop-filter: blur(18px);
+      border: 1.5px solid rgba(0, 185, 128, 0.1);
+      border-radius: 28px;
       padding: 2rem;
-      box-shadow: 0 10px 24px rgba(0, 0, 0, 0.08);
-      max-width: 420px;
       width: 100%;
+      max-width: 420px;
+      box-shadow: 0 12px 40px rgba(0, 0, 0, 0.08);
+      animation: fadeIn 0.4s ease-in-out;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     h2 {
-      font-size: 1.5rem;
-      font-weight: 800;
+      font-size: 1.6rem;
       color: #00b980;
-      margin-bottom: 1rem;
       text-align: center;
+      margin-bottom: 1.5rem;
     }
 
     input {
-      padding: 0.9rem;
       width: 100%;
-      font-size: 16px;
-      border-radius: 12px;
-      border: 1px solid #ccc;
+      padding: 1rem;
+      font-size: 1rem;
+      border-radius: 16px;
+      border: none;
+      background: rgba(255, 255, 255, 0.3);
       margin-bottom: 1rem;
+      color: #222;
+      box-shadow: inset 0 2px 5px rgba(0,0,0,0.05);
+    }
+
+    input::placeholder {
+      color: #666;
     }
 
     button {
       width: 100%;
-      padding: 0.9rem;
-      background-color: #00b980;
-      border: none;
-      border-radius: 12px;
-      font-weight: 600;
+      padding: 0.95rem;
+      font-size: 1rem;
+      background: #00b980;
       color: white;
-      font-size: 16px;
-      cursor: pointer;
+      border: none;
+      border-radius: 16px;
+      font-weight: 600;
       transition: background 0.3s ease;
+      cursor: pointer;
     }
 
     button:hover {
-      background-color: #009d70;
+      background: #00a472;
     }
 
     .mensaje {
-      text-align: center;
       margin-top: 1rem;
+      text-align: center;
       color: #007e65;
-      font-size: 14px;
+      font-size: 0.9rem;
     }
 
     .solicitudes {
-      margin-top: 2rem;
+      margin-top: 2.5rem;
     }
 
     .solicitudes h3 {
       font-size: 1.1rem;
-      color: #007e65;
+      color: #00b980;
+      text-align: center;
       margin-bottom: 1rem;
     }
 
     .solicitud {
-      background: #f9fffc;
-      border: 1px solid #d2f5e9;
-      border-radius: 14px;
+      background: rgba(255, 255, 255, 0.3);
+      border-radius: 18px;
       padding: 1rem;
       margin-bottom: 1rem;
+      text-align: center;
+      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.04);
     }
 
     .solicitud strong {
-      font-weight: 600;
-      color: #00b980;
+      font-size: 1rem;
+      color: #007e65;
     }
 
-    .solicitud-buttons {
-      margin-top: 0.8rem;
+    .botones {
       display: flex;
-      gap: 0.5rem;
+      justify-content: center;
+      gap: 0.6rem;
+      margin-top: 0.8rem;
     }
 
-    .btn-aceptar,
-    .btn-rechazar {
+    .botones button {
       flex: 1;
       padding: 0.6rem;
+      font-size: 0.9rem;
       border: none;
-      border-radius: 8px;
-      font-weight: 600;
-      font-size: 14px;
-      cursor: pointer;
+      border-radius: 12px;
     }
 
-    .btn-aceptar {
-      background-color: #00c97e;
+    .aceptar {
+      background: #00c97e;
       color: white;
     }
 
-    .btn-aceptar:hover {
-      background-color: #00b472;
-    }
-
-    .btn-rechazar {
-      background-color: #e0e0e0;
+    .rechazar {
+      background: #eee;
       color: #333;
-    }
-
-    .btn-rechazar:hover {
-      background-color: #ccc;
     }
 
     a {
       display: block;
-      margin-top: 2rem;
       text-align: center;
-      color: #00b980;
+      margin-top: 2rem;
       text-decoration: none;
-      font-size: 14px;
+      color: #00b980;
+      font-size: 0.95rem;
     }
 
     a:hover {
@@ -140,18 +152,18 @@
   </style>
 </head>
 <body>
-  <div class="card">
+  <div class="perfil-card">
     <h2>👤 Mi Perfil</h2>
     <input type="text" id="nombre" placeholder="Tu nombre completo" />
-    <button onclick="guardarCambios()">💾 Guardar</button>
+    <button onclick="guardarCambios()"> Guardar</button>
     <p class="mensaje" id="mensaje"></p>
 
     <div class="solicitudes">
-      <h3>📥 Solicitudes recibidas</h3>
+      <h3> Solicitudes pendientes</h3>
       <div id="lista-solicitudes">Cargando...</div>
     </div>
 
-    <a href="coincidencias.html">⬅ Volver a coincidencias</a>
+    <a href="coincidencias.html">← Volver</a>
   </div>
 
   <script>
@@ -207,40 +219,28 @@
       const contenedor = document.getElementById("lista-solicitudes");
 
       if (!solicitudes || solicitudes.length === 0) {
-        contenedor.innerHTML = "No tienes solicitudes pendientes.";
+        contenedor.innerHTML = ""
         return;
       }
 
       contenedor.innerHTML = solicitudes.map(s => `
         <div class="solicitud">
-          <strong>👤 ${s.usuarios?.nombre || "Sin nombre"}</strong>
-          <div class="solicitud-buttons">
-            <button class="btn-aceptar" onclick="aceptarSolicitud('${s.id}')">✅ Aceptar</button>
-            <button class="btn-rechazar" onclick="rechazarSolicitud('${s.id}')">❌ Rechazar</button>
+          <strong>👤 ${s.usuarios?.nombre || "Usuario"}</strong>
+          <div class="botones">
+            <button class="aceptar" onclick="aceptarSolicitud('${s.id}')">✅ Aceptar</button>
+            <button class="rechazar" onclick="rechazarSolicitud('${s.id}')">❌ Rechazar</button>
           </div>
         </div>
       `).join("");
     }
 
     async function aceptarSolicitud(id) {
-      const { error } = await supabase
-        .from("solicitudes_amigos")
-        .update({ estado: "aceptada" })
-        .eq("id", id);
-
-      if (error) {
-        alert("❌ Error al aceptar solicitud");
-      }
-
+      await supabase.from("solicitudes_amigos").update({ estado: "aceptada" }).eq("id", id);
       cargarSolicitudes();
     }
 
     async function rechazarSolicitud(id) {
-      const { error } = await supabase
-        .from("solicitudes_amigos")
-        .update({ estado: "rechazada" })
-        .eq("id", id);
-
+      await supabase.from("solicitudes_amigos").update({ estado: "rechazada" }).eq("id", id);
       cargarSolicitudes();
     }
 
